src/objects/Cronograma_entrega_items_OC__c.object
<CustomObject>
    <fields>
        <fullName>Cantidad__c</fullName>
        <label>Cantidad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fecha_entrega__c</fullName>
        <label>Fecha entrega</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Importe__c</fullName>
        <label>Importe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Item_orden_de_compra__c</fullName>
        <label>Item orden de compra</label>
        <referenceTo>Item_orden_de_compra__c</referenceTo>
        <relationshipLabel>Cronogramas entregas items OC</relationshipLabel>
        <relationshipName>Cronogramas_entregas_items_OC</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Cronograma entrega items OC</label>
    <nameField>
        <displayFormat>CEI-{00000000}</displayFormat>
        <label>Nombre de Cronograma entrega items OC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cronogramas entregas items OC</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>